[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/shop_item.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/prstartk.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[node name="ShopItem" type="Button"]
margin_right = 32.0
margin_bottom = 32.0
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
flat = true
script = ExtResource( 1 )

[node name="TLDColorRect" type="ColorRect" parent="."]
margin_top = 1.0
margin_right = 1.0
margin_bottom = 6.0

[node name="TLRColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_right = 6.0
margin_bottom = 1.0

[node name="BRUColorRect" type="ColorRect" parent="."]
margin_left = 31.0
margin_top = 26.0
margin_right = 32.0
margin_bottom = 31.0

[node name="BRLColorRect" type="ColorRect" parent="."]
margin_left = 26.0
margin_top = 31.0
margin_right = 31.0
margin_bottom = 32.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 1.5, 1.5 )

[node name="SoldRichTextLabel" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 16.0
margin_right = 38.0
margin_bottom = 27.0
rect_rotation = -15.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=#b9005b]Sold[/color][/center]"
text = "Sold"
scroll_active = false

[connection signal="mouse_entered" from="." to="." method="_on_ShopItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ShopItem_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_ShopItem_pressed"]
